[project]
name = "locomotive"
version = "0.1.0"
description = "Railyard's Backend (the engine that makes everything work)"
authors = [
    {name = "Subway Builder Modded Team"}
]
license = "GPLv3"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "gitpython (>=3.1.46,<4.0.0)"
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
